# Project334

P1/: P1.circ  README.md
P1/benchmark/: Cargo.toml
P1/benchmark/benches/: p1_benchmark.rs
P1/benchmark/src/: lib.rs
P1/docs/: ISA.md  backplane.md
P1/pcb/: 650473-5.lib  86093968124H55V1LF.STEP  SOD123-2_ONS.step
P1/pcb/alu_addsub/: AddSub.kicad_sch  EightBitAdder.kicad_sch  alu.kicad_pcb  alu.kicad_pro  alu.kicad_sch  sym-lib-table  untitled.kicad_sch
P1/pcb/alu_binary_op/: EightBitAdder.kicad_sch  alu.kicad_pcb  alu.kicad_prl  alu.kicad_sch
P1/pcb/alu_unary_op/: alu.kicad_pcb  alu.kicad_prl  alu.kicad_pro  alu.kicad_sch  alu.kicad_sch-bak  sym-lib-table  untitled.kicad_sch
P1/pcb/breakout/: breakout.kicad_pcb  breakout.kicad_pro  breakout.kicad_sch  fp-lib-table  sym-lib-table
P1/pcb/libs/: 2023-12-26_19-38-36.kicad_sym  2023-12-26_21-36-19.kicad_sym  650473-5.kicad_sym  650473-5.step  DC10EWA.kicad_sym  DIN41612_C_3x32_Female_Vertical_THT.kicad_mod  DIP750W50P254L2540H825Q20.kicad_mod  SOD123-2_ONS.kicad_mod  TE_650473-5.kicad_mod
P1/pcb/the_stack/: #auto_saved_files#  AddSub.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table  (+6 more)
P1/prgs/: benchmark.p1s  hello_world.p1s  template.p1s
P1/tb/tb_hw_alu_unary_op/: Cargo.toml  openocd.cfg  openocd.gdb
P1/tb/tb_hw_alu_unary_op/.cargo/: config.toml
P1/tb/tb_hw_alu_unary_op/src/: main.rs
P1/tests/: test_alu_ops.p1s  test_stack_ops.p1s
docs/: ISA.md
tests/: test_branching.p1s  test_lower_immediates.p1s  test_lower_luppup.p1s  test_reg_ops.p1s  test_upper_luppup.p1s
tooling/p1asm/: .gitignore
(+62 files in other folders)
