[package]
name = "tb_hw_alu_unary_op"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = {version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = {version = "0.7.3", features = ["device"]}
stm32f3xx-hal = {version = "0.10.0", features = ["stm32f303xc", "defmt","ld","rt"]}
defmt ="0.3.5"
defmt-rtt = "0.4.0"
panic-probe = {version = "0.3.2", features = ["print-defmt"]}
nb="1.1.0"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-
